--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -38,9 +38,9 @@
     <ul class="nav">
       <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
       <li><a  href="/archive.html">Archive</a></li>
-      <li><a  href="/pages.html">Pages</a></li>
       <li><a  href="/categories.html">Categories</a></li>
-      <li><a  href="/tags.html">Tags</a></li>
+      <li><a  href="/info/site.html">About me</a></li>
+      <li><a  href="/atom.xml">RSS</a></li>
     </ul>
   </div>
 
